--- a/browser/src/UI/components/Menu.less
+++ b/browser/src/UI/components/Menu.less
@@ -65,7 +65,6 @@
                 .highlight {
                     color: @text-color-highlight;
                     font-weight: bold;
-                    font-style: italic;
                 }
             }
 
@@ -77,9 +76,7 @@
                 .highlight {
                     color: @text-color-highlight;
                     font-weight: bold;
-                    font-style: italic;
                 }
-
             }
         }
     }
