--- a/browser/src/UI/components/QuickInfo.less
+++ b/browser/src/UI/components/QuickInfo.less
@@ -22,7 +22,7 @@
 
         .documentation {
             margin: 4px;
-            color: @text-color-highlight;
+            color: @text-color-detail;
             font-size: @font-size-small;
         }
 
